# SUN600G3_Monitoring

./: Cargo.toml  LICENSE  README.md  example_config.toml
src/: inverter.rs  main.rs  solarmanv5.rs
